# SEA

./: .gitignore  CLAUDE.md  README.md  TUTORIAL.md  pyproject.toml  requirements.txt
configs/: base_agent.yaml
configs/envs/: alfworld.yaml  alfworld_base.yaml  textcraft.yaml
configs/evolvers/: icl_reflexion.yaml  rl_grpo.yaml  sft_lora.yaml
docs/: ARCHITECTURE.md  FIGURE_PROMPT.md  FIGURE_PROMPT_CODE.md  PROMPTS.md  README_zh.md  TUTORIAL.md  TUTORIAL_MEMORY.md  TUTORIAL_RL.md  TUTORIAL_SFT.md  TUTORIAL_SKILLS.md
examples/e2e_demo/: run.py
examples/expel_textcraft/: run.py
examples/icl_reflexion_webshop/: config.yaml
examples/lora_sft_textcraft/: config.yaml
examples/memory_evolution/: run.py
examples/memory_textcraft/: run.py
examples/rl_grpo_alfworld/: config.yaml
examples/rl_textcraft/: rl_trajectories_cache.json  run.py
examples/sft_textcraft/: run.py  sft_trajectories_cache.json
examples/skill_evolution/: run.py
examples/skill_textcraft/: run.py
experiments/: .gitignore
experiments/olora-continual/: run.py
experiments/skill-composition/: run.py
ideas_scripts/olora-continual/: run.py
ideas_scripts/skill-composition/: run.py
scripts/: __init__.py  collect_trajectories.py  run_eval.py  run_evolution.py  serve_model.py
sea/: __init__.py
sea/agent/: __init__.py  agent.py  brain.py  planner.py
sea/core/: __init__.py  base.py  registry.py  types.py
sea/env/: __init__.py  base.py  parallel.py  wrapper.py
sea/evolution/: __init__.py  base.py  pipeline.py
sea/llm/: __init__.py  api_backend.py  base.py  (+2 more)
tests/: conftest.py
(+57 files in other folders)
